--- a/.github/workflows/DeploySSISPackages.yml
+++ b/.github/workflows/DeploySSISPackages.yml
@@ -10,12 +10,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          path: repo
 
       - name: List Directory Contents
         shell: powershell
         run: |
           Write-Host "Listing current directory contents:"
-          Get-ChildItem -Recurse
+          Get-ChildItem -Recurse -Path repo
 
       - name: Deploy SSIS Project (.ispac)
         env:
@@ -26,8 +28,8 @@ jobs:
         run: |
           Write-Host "Starting SSIS project deployment..."
 
-          # Use the correct .ispac path based on directory structure
-          $ispacPath = "ProjectPackages.ispac"
+          $repoPath = Resolve-Path "repo"
+          $ispacPath = Join-Path $repoPath "ProjectPackages\ProjectPackages\bin\Development\ProjectPackages.ispac"
           $wizardPath = "C:\Program Files (x86)\Microsoft SQL Server\160\DTS\Binn\ISDeploymentWizard.exe"
           $stdoutLog = ".\ssisdeploy_output.log"
           $stderrLog = ".\ssisdeploy_error.log"
@@ -36,7 +38,7 @@ jobs:
           Write-Host "Validating ISPAC file path: $ispacPath"
           if (-not (Test-Path $ispacPath)) {
               Write-Error "ISPAC file not found at: $ispacPath"
-              Get-ChildItem -Recurse | Out-String | Write-Host  # Debug: List all files
+              Get-ChildItem -Recurse -Path $repoPath | Out-String | Write-Host
               exit 1
           }
 
@@ -46,8 +48,6 @@ jobs:
               exit 1
           }
 
-          # Test SQL Server connectivity
-          Write-Host "Testing Windows Authentication connectivity..."
           try {
               $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"SELECT @@VERSION`" -o $connectLog"
               Invoke-Expression $sqlcmd
@@ -65,62 +65,21 @@ jobs:
           }
 
           function Deploy-SSISProject {
-              param (
-                  [string[]]$Arguments
-              )
-
+              param ([string[]]$Arguments)
               Write-Host "Running ISDeploymentWizard with arguments:"
-              foreach ($arg in $Arguments) {
-                  Write-Host "`t$arg"
-              }
-
-              # Run with silent mode and capture output
-              $process = Start-Process -FilePath $wizardPath -ArgumentList $Arguments -NoNewWindow -PassThru -Wait -RedirectStandardOutput $stdoutLog -RedirectStandardError $stderrLog
+              $Arguments | ForEach-Object { Write-Host "`t$_" }
+              $processInfo = New-Object System.Diagnostics.ProcessStartInfo
+              $processInfo.FileName = $wizardPath
+              $processInfo.Arguments = ($Arguments -join " ")
+              $processInfo.RedirectStandardOutput = $true
+              $processInfo.RedirectStandardError = $true
+              $processInfo.UseShellExecute = $false
+              $processInfo.CreateNoWindow = $true
+              $process = [System.Diagnostics.Process]::Start($processInfo)
+              $process.WaitForExit()
+              $stdout = $process.StandardOutput.ReadToEnd()
+              $stderr = $process.StandardError.ReadToEnd()
+              $stdout | Out-File -FilePath $stdoutLog
+              $stderr | Out-File -FilePath $stderrLog
               $exitCode = $process.ExitCode
-
-              Write-Host "===== STDOUT ====="
-              if (Test-Path $stdoutLog) {
-                  Get-Content $stdoutLog | Write-Host
-              } else {
-                  Write-Host "<No stdout log found>"
-              }
-
-              Write-Host "===== STDERR ====="
-              if (Test-Path $stderrLog) {
-                  Get-Content $stderrLog | Write-Host
-              } else {
-                  Write-Host "<No stderr log found>"
-              }
-
-              return $exitCode
-          }
-
-          # Deploy with Windows Authentication and silent mode
-          $winAuthArgs = @(
-              "/SourcePath:`"$ispacPath`"",
-              "/DestinationServer:`"$env:DB_SERVER`"",
-              "/DestinationPath:`"/SSISDB/TimesheetDeployedPackages/ProjectPackages`"",
-              "/Silent"
-          )
-
-          $exitCode = Deploy-SSISProject -Arguments $winAuthArgs
-
-          if ($exitCode -ne 0) {
-              Write-Error "Deployment failed with exit code $exitCode."
-              exit $exitCode
-          }
-
-          # Validate deployment
-          Write-Host "Validating deployment in SSISDB..."
-          $validateCmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"SELECT name FROM SSISDB.catalog.projects WHERE name = 'ProjectPackages' AND folder_name = 'TimesheetDeployedPackages'`" -o $connectLog"
-          Invoke-Expression $validateCmd
-          if ($LASTEXITCODE -eq 0 -and (Get-Content $connectLog | Select-String "ProjectPackages")) {
-              Write-Host "Deployment validation succeeded: ProjectPackages found in SSISDB."
-          } else {
-              Write-Warning "Deployment validation failed: ProjectPackages not found in SSISDB."
-              Get-Content $connectLog | Write-Warning
-              exit 1
-          }
-
-          Write-Host "SSIS project deployed successfully."
-          exit 0
+              Write-Host "===== STDOUT ====="; if (Test-Path $
