--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -2,11 +2,7 @@
 name: Main Deployment Workflow
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'sql/TimesheetDB.sql'
+  workflow_dispatch:
 
 jobs:
   deploy-database:
