--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -2,7 +2,11 @@
 name: Main Deployment Workflow
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - 'sql/TimesheetDB.sql'
 
 jobs:
   deploy-database:
