--- a/.github/workflows/ssis-deploy.yml
+++ b/.github/workflows/ssis-deploy.yml
@@ -11,7 +11,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: List Directory Contents
+        shell: powershell
+        run: |
+          Write-Host "Listing current directory contents:"
+          Get-ChildItem -Recurse
+
       - name: Deploy SSIS Project (.ispac)
+        env:
+          DB_SERVER: ${{ secrets.DB_SERVER }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         shell: powershell
         run: |
           Write-Host "Starting SSIS project deployment..."
@@ -20,59 +30,86 @@ jobs:
           $wizardPath = "C:\Program Files (x86)\Microsoft SQL Server\160\DTS\Binn\ISDeploymentWizard.exe"
           $stdoutLog = ".\ssisdeploy_output.log"
           $stderrLog = ".\ssisdeploy_error.log"
+          $connectLog = ".\ssisconnect_test.log"
 
+          Write-Host "Validating ISPAC file path: $ispacPath"
           if (-not (Test-Path $ispacPath)) {
               Write-Error "ISPAC file not found at: $ispacPath"
               exit 1
           }
 
+          Write-Host "Validating ISDeploymentWizard.exe path: $wizardPath"
           if (-not (Test-Path $wizardPath)) {
               Write-Error "ISDeploymentWizard.exe not found at: $wizardPath"
               exit 1
           }
 
-          Write-Host "Deploying with Windows Auth..."
+          # Test SQL Server connectivity
+          Write-Host "Testing Windows Authentication connectivity..."
+          try {
+              $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"SELECT @@VERSION`" -o $connectLog"
+              Invoke-Expression $sqlcmd
+              if ($LASTEXITCODE -eq 0) {
+                  Write-Host "Windows Authentication connectivity test succeeded."
+                  Get-Content $connectLog | Write-Host
+              } else {
+                  Write-Warning "Windows Authentication connectivity test failed."
+                  Get-Content $connectLog | Write-Warning
+                  exit 1
+              }
+          } catch {
+              Write-Error "Error testing Windows Authentication: $_"
+              exit 1
+          }
 
-          $args = @(
+          function Deploy-SSISProject {
+              param (
+                  [string[]]$Arguments
+              )
+
+              Write-Host "Running ISDeploymentWizard with arguments:"
+              foreach ($arg in $Arguments) {
+                  Write-Host "`t$arg"
+              }
+
+              # Capture output directly
+              $output = & $wizardPath @Arguments 2>&1
+              $output | Out-File -FilePath $stdoutLog
+              $exitCode = $LASTEXITCODE
+
+              Write-Host "===== STDOUT ====="
+              if (Test-Path $stdoutLog) {
+                  Get-Content $stdoutLog | Write-Host
+              } else {
+                  Write-Host "<No stdout log found>"
+              }
+
+              Write-Host "===== STDERR ====="
+              if (Test-Path $stderrLog) {
+                  Get-Content $stderrLog | Write-Host
+              } else {
+                  Write-Host "<No stderr log found>"
+              }
+
+              return $exitCode
+          }
+
+          # Use Windows Authentication
+          $winAuthArgs = @(
               "/SourcePath:`"$ispacPath`"",
               "/DestinationServer:`"$env:DB_SERVER`"",
               "/DestinationPath:`"/SSISDB/TimesheetDeployedPackages/ProjectPackages`""
           )
 
-          $processInfo = New-Object System.Diagnostics.ProcessStartInfo
-          $processInfo.FileName = $wizardPath
-          $processInfo.Arguments = $args -join ' '
-          $processInfo.RedirectStandardOutput = $true
-          $processInfo.RedirectStandardError = $true
-          $processInfo.UseShellExecute = $false
+          $exitCode = Deploy-SSISProject -Arguments $winAuthArgs
 
-          $process = New-Object System.Diagnostics.Process
-          $process.StartInfo = $processInfo
-          $process.Start() | Out-Null
-
-          $stdOut = $process.StandardOutput.ReadToEnd()
-          $stdErr = $process.StandardError.ReadToEnd()
-          $process.WaitForExit()
-
-          # Write outputs to files
-          $stdOut | Out-File -FilePath $stdoutLog -Encoding utf8
-          $stdErr | Out-File -FilePath $stderrLog -Encoding utf8
-
-          # Write outputs to console
-          Write-Host "===== ISDeploymentWizard STDOUT ====="
-          Write-Host $stdOut
-
-          Write-Host "===== ISDeploymentWizard STDERR ====="
-          Write-Host $stdErr
-
-          if ($process.ExitCode -ne 0) {
-              Write-Error "SSIS deployment failed with exit code $($process.ExitCode). See logs for details."
-              exit $process.ExitCode
+          if ($exitCode -ne 0) {
+              Write-Error "Deployment failed with exit code $exitCode."
+              exit $exitCode
           }
 
           Write-Host "SSIS project deployed successfully."
-        env:
-          DB_SERVER: ${{ secrets.DB_SERVER }}
+          exit 0
 
   deploy-sql-agent-jobs:
     needs: deploy-ssis-project
