--- a/.github/workflows/ssis-deploy.yml
+++ b/.github/workflows/ssis-deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           Write-Host "Starting SSIS project deployment..."
 
-          $ispacPath = "ProjectPackages\ProjectPackages\bin\Development\ProjectPackages.ispac"
+          $ispacPath = "ProjectPackages\ProjectPackages\bin\Development\ProjectPackages.ispac"  # Your directory
           $wizardPath = "C:\Program Files (x86)\Microsoft SQL Server\160\DTS\Binn\ISDeploymentWizard.exe"
           $stdoutLog = ".\ssisdeploy_output.log"
           $stderrLog = ".\ssisdeploy_error.log"
@@ -34,78 +34,81 @@ jobs:
 
           Write-Host "Validating ISPAC file path: $ispacPath"
           if (-not (Test-Path $ispacPath)) {
-              Write-Error "ISPAC file not found at: $ispacPath"
-              exit 1
+            Write-Error "ISPAC file not found at: $ispacPath"
+            exit 1
           }
 
           Write-Host "Validating ISDeploymentWizard.exe path: $wizardPath"
           if (-not (Test-Path $wizardPath)) {
-              Write-Error "ISDeploymentWizard.exe not found at: $wizardPath"
-              exit 1
+            Write-Error "ISDeploymentWizard.exe not found at: $wizardPath"
+            exit 1
           }
 
-          # Test SQL Server connectivity
-          Write-Host "Testing Windows Authentication connectivity..."
+          # Test SQL Server connectivity with SQL Authentication
+          Write-Host "Testing SQL Authentication connectivity..."
           try {
-              $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"SELECT @@VERSION`" -o $connectLog"
-              Invoke-Expression $sqlcmd
-              if ($LASTEXITCODE -eq 0) {
-                  Write-Host "Windows Authentication connectivity test succeeded."
-                  Get-Content $connectLog | Write-Host
-              } else {
-                  Write-Warning "Windows Authentication connectivity test failed."
-                  Get-Content $connectLog | Write-Warning
-                  exit 1
-              }
-          } catch {
-              Write-Error "Error testing Windows Authentication: $_"
+            $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -Q `"SELECT @@VERSION`" -o $connectLog"
+            Invoke-Expression $sqlcmd
+            if ($LASTEXITCODE -eq 0) {
+              Write-Host "SQL Authentication connectivity test succeeded."
+              Get-Content $connectLog | Write-Host
+            } else {
+              Write-Warning "SQL Authentication connectivity test failed."
+              Get-Content $connectLog | Write-Warning
               exit 1
+            }
+          } catch {
+            Write-Error "Error testing SQL Authentication: $_"
+            exit 1
           }
 
           function Deploy-SSISProject {
-              param (
-                  [string[]]$Arguments
-              )
+            param (
+              [string[]]$Arguments
+            )
 
-              Write-Host "Running ISDeploymentWizard with arguments:"
-              foreach ($arg in $Arguments) {
-                  Write-Host "`t$arg"
-              }
+            Write-Host "Running ISDeploymentWizard with arguments:"
+            foreach ($arg in $Arguments) {
+              Write-Host "`t$arg"
+            }
 
-              # Capture output directly
-              $output = & $wizardPath @Arguments 2>&1
-              $output | Out-File -FilePath $stdoutLog
-              $exitCode = $LASTEXITCODE
+            $output = & $wizardPath @Arguments 2>$stderrLog
+            $output | Out-File -FilePath $stdoutLog
+            $exitCode = $LASTEXITCODE
 
-              Write-Host "===== STDOUT ====="
-              if (Test-Path $stdoutLog) {
-                  Get-Content $stdoutLog | Write-Host
-              } else {
-                  Write-Host "<No stdout log found>"
-              }
+            Write-Host "===== STDOUT ====="
+            if (Test-Path $stdoutLog) {
+              Get-Content $stdoutLog | Write-Host
+            } else {
+              Write-Host "<No stdout log found>"
+            }
 
-              Write-Host "===== STDERR ====="
-              if (Test-Path $stderrLog) {
-                  Get-Content $stderrLog | Write-Host
-              } else {
-                  Write-Host "<No stderr log found>"
-              }
+            Write-Host "===== STDERR ====="
+            if (Test-Path $stderrLog) {
+              Get-Content $stderrLog | Write-Host
+            } else {
+              Write-Host "<No stderr log found>"
+            }
 
-              return $exitCode
+            return $exitCode
           }
 
-          # Use Windows Authentication
-          $winAuthArgs = @(
-              "/SourcePath:`"$ispacPath`"",
-              "/DestinationServer:`"$env:DB_SERVER`"",
-              "/DestinationPath:`"/SSISDB/TimesheetDeployedPackages/ProjectPackages`""
+          # Use SQL Authentication
+          $sqlAuthArgs = @(
+            "/Silent",
+            "/SourcePath:`"$ispacPath`"",
+            "/DestinationServer:`"$env:DB_SERVER`"",
+            "/DestinationPath:`"/SSISDB/TimesheetDeployedPackages/ProjectPackages`"",
+            "/User:`"$env:DB_USER`"",
+            "/Password:`"$env:DB_PASSWORD`"",
+            "/Auth:SQL"
           )
 
-          $exitCode = Deploy-SSISProject -Arguments $winAuthArgs
+          $exitCode = Deploy-SSISProject -Arguments $sqlAuthArgs
 
           if ($exitCode -ne 0) {
-              Write-Error "Deployment failed with exit code $exitCode."
-              exit $exitCode
+            Write-Error "Deployment failed with exit code $exitCode."
+            exit $exitCode
           }
 
           Write-Host "SSIS project deployed successfully."
@@ -127,22 +130,24 @@ jobs:
           $outdir = "temp-jobs"
           New-Item -ItemType Directory -Force -Path $outdir | Out-Null
 
-          $packages = sqlcmd -S "$env:DB_SERVER" -E -Q "SELECT name FROM SSISDB.catalog.packages WHERE project_id IN (SELECT project_id FROM SSISDB.catalog.folders WHERE name = 'TimesheetDeployedPackages') AND name NOT IN ('TimesheetPa', 'TimesheetStaging1')" -h -1 -W
+          $packages = sqlcmd -S "$env:DB_SERVER" -U "$env:DB_USER" -P "$env:DB_PASSWORD" -Q "SELECT name FROM SSISDB.catalog.packages WHERE project_id IN (SELECT project_id FROM SSISDB.catalog.folders WHERE name = 'TimesheetDeployedPackages') AND name NOT IN ('TimesheetPa', 'TimesheetStaging1')" -h -1 -W
 
           foreach ($pkg in $packages.Trim().Split("`n") | Where-Object { $_ }) {
-              $name = $pkg.Trim()
-              $sqlFile = Join-Path $outdir "$name.sql"
-              $content = (Get-Content -Raw $template) -replace '@jobName', $name -replace 'LAPTOP-ATT0UPK9', $env:DB_SERVER
-              $content | Out-File -Encoding utf8 -NoNewline $sqlFile
-              Write-Host "Deploying job: $name"
-              $cmd = "sqlcmd -S `"$env:DB_SERVER`" -E -i `"$sqlFile`""
-              Invoke-Expression $cmd
-              if ($LASTEXITCODE -ne 0) {
-                  Write-Error "Failed to deploy job: $name"
-                  exit 1
-              }
+            $name = $pkg.Trim()
+            $sqlFile = Join-Path $outdir "$name.sql"
+            $content = (Get-Content -Raw $template) -replace '@jobName', $name -replace 'LAPTOP-ATT0UPK9', $env:DB_SERVER
+            $content | Out-File -Encoding utf8 -NoNewline $sqlFile
+            Write-Host "Deploying job: $name"
+            $cmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -i `"$sqlFile`""
+            Invoke-Expression $cmd
+            if ($LASTEXITCODE -ne 0) {
+              Write-Error "Failed to deploy job: $name"
+              exit 1
+            }
           }
 
           Write-Host "All SQL Server Agent jobs deployed."
         env:
           DB_SERVER: ${{ secrets.DB_SERVER }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
