--- a/.github/workflows/ssis-deploy.yml
+++ b/.github/workflows/ssis-deploy.yml
@@ -17,6 +17,34 @@ jobs:
           Write-Host "Listing current directory contents:"
           Get-ChildItem -Recurse
 
+      - name: Create SSIS Catalog
+        shell: powershell
+        env:
+          DB_SERVER: ${{ secrets.DB_SERVER }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        run: |
+          Write-Host "Checking and creating SSIS Catalog..."
+          $createCatalogSql = @"
+          IF NOT EXISTS (SELECT name FROM master.sys.databases WHERE name = 'SSISDB')
+          BEGIN
+              CREATE DATABASE SSISDB;
+              ALTER AUTHORIZATION ON DATABASE::SSISDB TO [sa];
+              EXEC SSISDB.catalog.create_catalog;
+          END
+          "@
+          $sqlFile = ".\create_ssisdb.sql"
+          $createCatalogSql | Out-File -FilePath $sqlFile -Encoding UTF8
+          $cmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -i `"$sqlFile`" -o .\ssisdb_create.log"
+          Invoke-Expression $cmd
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Failed to create SSIS Catalog. Check ssisdb_create.log"
+            Get-Content .\ssisdb_create.log | Write-Error
+            exit 1
+          }
+          Write-Host "SSIS Catalog creation/check completed."
+          Get-Content .\ssisdb_create.log | Write-Host
+
       - name: Deploy SSIS Project (.ispac)
         env:
           DB_SERVER: ${{ secrets.DB_SERVER }}
@@ -26,7 +54,7 @@ jobs:
         run: |
           Write-Host "Starting SSIS project deployment..."
 
-          $ispacPath = "ProjectPackages\ProjectPackages\bin\Development\ProjectPackages.ispac"  # Your directory
+          $ispacPath = "ProjectPackages\ProjectPackages\bin\Development\ProjectPackages.ispac"
           $wizardPath = "C:\Program Files (x86)\Microsoft SQL Server\160\DTS\Binn\ISDeploymentWizard.exe"
           $stdoutLog = ".\ssisdeploy_output.log"
           $stderrLog = ".\ssisdeploy_error.log"
@@ -44,7 +72,7 @@ jobs:
             exit 1
           }
 
-          # Test SQL Server connectivity with SQL Authentication
+          # Test SQL Server connectivity
           Write-Host "Testing SQL Authentication connectivity..."
           try {
             $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -Q `"SELECT @@VERSION`" -o $connectLog"
@@ -72,7 +100,9 @@ jobs:
               Write-Host "`t$arg"
             }
 
-            $output = & $wizardPath @Arguments 2>$stderrLog
+            # Temporarily remove /Silent for debugging
+            $argsWithoutSilent = $Arguments | Where-Object { $_ -ne "/Silent" }
+            $output = & $wizardPath @argsWithoutSilent 2>$stderrLog
             $output | Out-File -FilePath $stdoutLog
             $exitCode = $LASTEXITCODE
 
@@ -93,9 +123,7 @@ jobs:
             return $exitCode
           }
 
-          # Use SQL Authentication
           $sqlAuthArgs = @(
-            "/Silent",
             "/SourcePath:`"$ispacPath`"",
             "/DestinationServer:`"$env:DB_SERVER`"",
             "/DestinationPath:`"/SSISDB/TimesheetDeployedPackages/ProjectPackages`"",
