--- a/.github/workflows/ssis-deploy.yml
+++ b/.github/workflows/ssis-deploy.yml
@@ -169,13 +169,14 @@ jobs:
           foreach ($pkg in $packages.Trim().Split("`n") | Where-Object { $_ }) {
             $name = $pkg.Trim()
             $sqlFile = Join-Path $outdir "$name.sql"
-            $content = (Get-Content -Raw $template) -replace '@jobName', $name -replace 'LAPTOP-ATT0UPK9', $env:DB_SERVER
+            $content = (Get-Content -Raw $template) -replace '@jobName', $name -replace 'LAPTOP-ATT0UPK9', $env:DB_SERVER -replace '\$env:DB_USER', $env:DB_USER
             $content | Out-File -Encoding utf8 -NoNewline $sqlFile
             Write-Host "Deploying job: $name"
-            $cmd = "sqlcmd -S `"$env:DB_SERVER`" -E -i `"$sqlFile`""
+            $cmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -i `"$sqlFile`""
             Invoke-Expression $cmd
             if ($LASTEXITCODE -ne 0) {
               Write-Error "Failed to deploy job: $name"
+              Get-Content $sqlFile | Write-Error
               exit 1
             }
           }
@@ -183,3 +184,5 @@ jobs:
           Write-Host "All SQL Server Agent jobs deployed."
         env:
           DB_SERVER: ${{ secrets.DB_SERVER }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
